--- a/css/screen.css
+++ b/css/screen.css
@@ -70,10 +70,12 @@ h1,
 h2,
 h3 {
   color: #17181a;
+  font-family: "Inter Web", 'Helvetica Neue', Helvetica, arial, sans-serif;
 }
 
 h1 {
   /*font-family: "Times New Roman", serif;*/
+  font-family: "Playfair Display", serif;
   font-size: 36px;
   font-weight: normal;
   line-height: 40px;
