Added author compnent styles

--- a/css/screen.css
+++ b/css/screen.css
@@ -26,11 +26,11 @@ html {
   font-size: 16px;
   line-height: 1.5;
   /*font-family: 'Inter Web', 'Helvetica Neue', Helvetica, arial, sans-serif;*/
-  font-family: "droid-serif", Georgia, serif;
+  font-family: 'droid-serif', Georgia, serif;
   color: #5c6366;
   padding: 48px 24px 24px;
-  -webkit-font-smoothing:antialiased;
-  -moz-osx-font-smoothing:grayscale;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -72,12 +72,12 @@ h1,
 h2,
 h3 {
   color: #17181a;
-  font-family: "Inter Web", 'Helvetica Neue', Helvetica, arial, sans-serif;
+  font-family: 'Inter Web', 'Helvetica Neue', Helvetica, arial, sans-serif;
 }
 
 h1 {
   /*font-family: "Times New Roman", serif;*/
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   font-size: 36px;
   font-weight: normal;
   line-height: 40px;
@@ -90,8 +90,8 @@ h2 {
   margin: 0 0 24px;
 }
 
-*+h2{
-    margin-top: 48px;
+* + h2 {
+  margin-top: 48px;
 }
 
 h3 {
@@ -168,6 +168,38 @@ a:active {
 a:hover,
 a:focus {
   color: #1abaff;
+}
+
+/* 
+    Components: Author
+*/
+.c-author {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+  gap: 16px;
+}
+
+.c-author__image {
+  width: 56px;
+  height: 56px;
+  border-radius: 100%;
+}
+
+.c-author__name,
+.c-author__meta {
+  margin-bottom: 0;
+}
+
+.c-author__meta {
+    font-size: 14px;
+    font-family: 'Inter', 'Helvetica Neue', Helvetica, arial, sans-serif;
+    line-height: 24px;
+}
+
+.c-author__name{
+    font-size: 16px;
+    line-height: 24px;
 }
 
 /* Small devices (landscape phones, 576px and up) */
