added responsive layout

--- a/css/screen.css
+++ b/css/screen.css
@@ -34,7 +34,7 @@ html {
 }
 
 body {
-  max-width: 42em;
+  /*max-width: 42em;*/
   margin: 0 auto;
 }
 
@@ -192,15 +192,71 @@ a:focus {
 }
 
 .c-author__meta {
-    font-size: 14px;
-    font-family: 'Inter', 'Helvetica Neue', Helvetica, arial, sans-serif;
-    line-height: 24px;
+  font-size: 14px;
+  font-family: 'Inter', 'Helvetica Neue', Helvetica, arial, sans-serif;
+  line-height: 24px;
 }
 
-.c-author__name{
-    font-size: 16px;
-    line-height: 24px;
+.c-author__name {
+  font-size: 16px;
+  line-height: 24px;
 }
+
+/* 
+    Components: Article
+*/
+.c-article__header,
+.c-article__body {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.c-article__header {
+  padding: 24px 24px 0;
+}
+
+.c-article__body {
+  padding: 0 24px;
+}
+
+@media (min-width: 768px) {
+  .c-article__header {
+    padding: 48px 48px 24px;
+  }
+  .c-article__author {
+    padding-bottom: 24px;
+  }
+  .c-article__body {
+    padding: 24px 48px;
+  }
+}
+
+@media (min-width: 992) {
+  .c-article__body {
+    display: flex;
+    gap: 24px;
+  }
+  .c-article__author {
+    width: 25%;
+  }
+  .c-article__content {
+    width: 75%;
+  }
+  .c-author{
+      flex-direction: column;
+      align-items: start;
+  }
+}
+
+/* 
+    Utilities: max-width
+    ---
+    Utility classes to put specific max widths onto elements
+*/
+.u-max-width-sm{
+    max-width: 36em;
+}
+
 
 /* Small devices (landscape phones, 576px and up) */
 
